# watcher-fs

./: .buildinfo  .gitignore  LICENSE  NOTES.md  README.md  actions.html  async_watcher.html  cli.html  command_line.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  tox.ini  watcher.html
.github/workflows/: test_and_docs.yml
_sources/: async_watcher.rst.txt  modules.rst.txt
docs/source/: actions.rst  cli.rst  command_line.rst  conf.py  index.rst  watcher.rst
src/: watcher.py
src/fswatcher/: watcher.py
src/watcher_fs/: async_watcher.py  cli.py  watcher.py
src/watcher_fs/actions/: cmd.py  notify.py
test/: test_async_watcher.py  test_cli.py  test_cmd.py  test_notify.py  test_watcher.py  test_watcher_list.py
