[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fswatcher"
version = "1.0.0"
description = "A Python package for monitoring file system changes"
readme = "README.md"
authors = [{ name = "Pavel Křupala", email = "pavel.krupala@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/pavelkrupala/fswatcher"
Documentation = "https://pavelkrupala.github.io/fswatcher"